2010-11-24
* Conventionalised and tweaked the build system a little more.
* Reorganised the newly added Open81 content in preparation for the
  soon to be included Open80 content.

2010-07-15 Thunor <thunorsif_at_hotmail.com>
* Both the mctemplate and PipePanic game are complete.

2010-05-11 Thunor <thunorsif_at_hotmail.com>
* Added a ZX81 machine code template and a pipe connecting game which
  is still under development.

2010-05-06 Thunor <thunorsif_at_hotmail.com>
* Tweaked GPH GP2X Wiz support.

2010-05-04 Thunor <thunorsif_at_hotmail.com>
* Added support for the GPH GP2X Wiz.

2010-04-30 Thunor <thunorsif_at_hotmail.com>
* Changed the way sdl_rcfile_read() manages reading ctrl_remaps: If one
  or more ctrl_remaps were read then they will completely replace the
  existing default ctrl_remaps, and if none were read then the defaults
  will remain.

2010-04-28 Thunor <thunorsif_at_hotmail.com>
* Added fullscreen, xres and yres command line options.
* Added keyboard page up and page down to the load selector.

2010-04-27 Thunor <thunorsif_at_hotmail.com>
* Version 2.1.6.1 released
* Fixed a few issues with the joystick configurator.

2010-04-26 Thunor <thunorsif_at_hotmail.com>
* Version 2.1.6 released
* Added an alternative keyboard based control remapper (F9) for users
  with single buttoned joysticks.

2010-04-25 Thunor <thunorsif_at_hotmail.com>
* The joystick configurator and runtime options are now complete.

2010-04-19 Thunor <thunorsif_at_hotmail.com>
* Fixed a z81 bug in common.c:load_selector() whereby the parent dir
  wasn't always returned by readdir() which would result in the load
  selector not finding any suitable files in a folder and closing
  prematurely, and also becoming stuck in a folder with no way out.
  I experienced this on my Sharp Zaurus.
* Tweaked the selector navigation within runopts and added joystick
  LTrig/RTrig pageup and pagedown control remappings to the load
  selector (I've already added them to runopts).
