@@ -1,3 +1,6 @@
+2010-11-25
+* Added support for assembling pipepanic and mctemplate using Pasmo.
+
 2010-11-24
 * Conventionalised and tweaked the build system a little more.
 * Reorganised the newly added Open81 content in preparation for the
